--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=e3644c3d8e1f0b7bc099",
-    "/css/app.css": "/css/app.css?id=68b329da9893e34099c7"
+    "/js/app.js": "/js/app.js?id=76a7e09355553bfa0ec7",
+    "/js/manifest.js": "/js/manifest.js?id=106c280ec50960820cb7",
+    "/css/app.css": "/css/app.css?id=68b329da9893e34099c7",
+    "/js/vendor.js": "/js/vendor.js?id=0c8c111a993c228674db"
 }
